--- a/Views/ComicBooks/Delete.cshtml
+++ b/Views/ComicBooks/Delete.cshtml
@@ -1,14 +1,14 @@
 @model ComicSystem.Models.ComicBook
 
-<h2>Delete Comic Book</h2>
-<p>Are you sure you want to delete this comic book?</p>
+<h2 class="text-danger">Delete Comic Book</h2>
+<p class="text-muted">Are you sure you want to delete this comic book?</p>
 <dl class="row">
     <dt class="col-sm-2">Title</dt>
     <dd class="col-sm-10">@Model.Title</dd>
     <dt class="col-sm-2">Author</dt>
     <dd class="col-sm-10">@Model.Author</dd>
     <dt class="col-sm-2">Price Per Day</dt>
-    <dd class="col-sm-10">@Model.PricePerDay</dd>
+    <dd class="col-sm-10">@Model.PricePerDay.ToString("F2")</dd>
 </dl>
 
 <form asp-action="Delete" method="post">
@@ -16,6 +16,23 @@
     <button type="submit" class="btn btn-danger">Delete</button>
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 
-
 </form>
+
+@* <div class="container">
+    <h2 class="text-danger">Delete Comic Book</h2>
+    <p class="text-muted">Are you sure you want to delete this comic book?</p>
+    <dl class="row" ">
+        <dt class="col-sm-2">Title</dt>
+        <dd class="col-sm-10">@Model.Title</dd>
+        <dt class="col-sm-2">Author</dt>
+        <dd class="col-sm-10">@Model.Author</dd>
+        <dt class="col-sm-2">Price Per Day</dt>
+        <dd class="col-sm-10">@Model.PricePerDay.ToString("F2")</dd>
+    </dl>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="ComicBookID" />
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
+</div> *@
 
